k8s/overlays/gitops-blue-green-aws/patches/backend-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: enterprise-app
spec:
  template:
    spec:
      containers:
        - name: backend
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: "4"
              memory: 1Gi
